--- a/intex.html
+++ b/intex.html
@@ -10,4 +10,7 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://disbeliefpersecutionnumbers.com/c223d8edc623e76a0ed00a2887785c88/invoke.js"></scr' + 'ipt>');
-</script></div></div><div class="wapp-msg"><a class="share-link newyear animated pulse infinite" href="whatsapp://send?text=*Secret Message पढ़ने के लिए लिंक पर क्लिक करें* ganeshchaturthi.netlify.app"><span class="newyear-share"> Share on Whatsapp</span></a></div></body></html>
+</script></div><div class="animated pulse infinite" style="font-size:34px; text-align:center; margin:10px; color:cyan; font-weight:bold;">Ganesh Chaturthi</br>
+ke pavan avsar par</br>
+meri or se Apko</br>
+Dhersari shubh kamnayein.</div></div><div class="wapp-msg"><a class="share-link newyear animated pulse infinite" href="whatsapp://send?text=*Secret Message पढ़ने के लिए लिंक पर क्लिक करें* ganeshchaturthi.netlify.app"><span class="newyear-share"> Share on Whatsapp</span></a></div></body></html>
